# art1simulator

./: CMakeLists.txt  README  delete_results  genbinpats.py  generate_binary_patterns  runart1
ccl/: dotest  vec  vec.c
data/: mushrooms.csv  mushrooms_test.csv  mushrooms_train.csv
doc/html/: annotated.html  annotated.js  art1_8c.html  art1_8c.js  art1_8c__incl.map  art1_8c__incl.md5  art1_8c_a03b474f3089272d9f3b614dc73d8b468_icgraph.map  art1_8c_a03b474f3089272d9f3b614dc73d8b468_icgraph.md5  art1_8c_a1911a1940ed363f7f58050e738f076b8_cgraph.map  art1_8c_a1911a1940ed363f7f58050e738f076b8_cgraph.md5  art1_8c_a1911a1940ed363f7f58050e738f076b8_icgraph.map  art1_8c_a1911a1940ed363f7f58050e738f076b8_icgraph.md5  art1_8c_a3e69b8605f3c9eea5ef7aef29f5d5f05_cgraph.map  art1_8c_a3e69b8605f3c9eea5ef7aef29f5d5f05_cgraph.md5  art1_8c_a3e69b8605f3c9eea5ef7aef29f5d5f05_icgraph.map  art1_8c_a3e69b8605f3c9eea5ef7aef29f5d5f05_icgraph.md5  art1_8c_a5217c9d063680d8924839b9f0e6bfad0_cgraph.map  art1_8c_a5217c9d063680d8924839b9f0e6bfad0_cgraph.md5  art1_8c_a5217c9d063680d8924839b9f0e6bfad0_icgraph.map  art1_8c_a5217c9d063680d8924839b9f0e6bfad0_icgraph.md5  art1_8c_a5c928b4810ec54fc333a49c26aacc624_icgraph.map  art1_8c_a5c928b4810ec54fc333a49c26aacc624_icgraph.md5  art1_8c_a6a244d9593bbcbc30389044848bb8bea_icgraph.map  art1_8c_a6a244d9593bbcbc30389044848bb8bea_icgraph.md5  art1_8c_a84b8605661376445ec3d74ec8e7d6cca_cgraph.map  art1_8c_a84b8605661376445ec3d74ec8e7d6cca_cgraph.md5  (+150 more)
doc/latex/: annotated.tex  (+82 more)
src/: art1.c  art1.h  dbg.h  io.c  io.h  main.c  mainpage.dox  utls.c  utls.h
(+51 files in other folders)
